--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,7 +1,7 @@
 
 
-{% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
+<!-- {% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}"> -->
 
 <h1>Polls List</h1>
 
@@ -9,7 +9,7 @@
     <ul>
     {% for question in latest_question_list %}
         <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
-    </li>
+
 
     {% endfor %}
     </ul>
